<resources>
    <string name="app_name">Planning Poker</string>
    <string name="menu_about">About</string>
    <string name="text_coffee">Coffee</string>
    <string name="text_about">Planning Poker is part of a personal project for Android development study.</string>
    <string name="text_its_free">It\'s free and Always will be!</string>
    <string name="text_enjoy">Enjoy.</string>
    <string name="dev_name" translatable="false">Ricardo de Carvalho</string>
    <string name="dev_email" translatable="false">skapitao@gmail.com</string>
    <string name="dev_site" translatable="false">http://ricardodecarvalho.com</string>
</resources>
